// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MasterPaymentType Component > MasterPaymentTypeComponent Snapshots > default state 1`] = `
<DocumentFragment>
  <div
    data-testid="layout"
  >
    <div
      class="flex flex-col h-full pb-18 lg:pb-0 px-3 lg:px-0 lg:-mt-4 relative"
    >
      <div
        class="flex items-center justify-between py-2 mb-1 lg:mb-4 relative"
      >
        <button
          aria-label="Back"
          class="w-11 h-11 rounded-full bg-[#F4F4F5] hover:bg-[#E9E9EB] active:scale-95 transition-all flex items-center justify-center text-black shrink-0"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.4"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M19 12H5"
            />
            <path
              d="M12 19 5 12l7-7"
            />
          </svg>
        </button>
        <h1
          class="flex-1 text-center text-[17px] font-semibold text-black tracking-tight px-2 truncate"
        >
          Payment Type List
        </h1>
        <div
          class="relative shrink-0"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="More options"
            class="w-11 h-11 rounded-full bg-[#F4F4F5] hover:bg-[#E9E9EB] active:scale-95 transition-all flex items-center justify-center text-black"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
            >
              <circle
                cx="5"
                cy="12"
                r="1.8"
              />
              <circle
                cx="12"
                cy="12"
                r="1.8"
              />
              <circle
                cx="19"
                cy="12"
                r="1.8"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="md:hidden space-y-6 mt-10"
      >
        <div
          class="relative mb-3"
        >
          <span
            class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none text-brand-text-medium scale-125"
          >
            <div
              data-testid="icon-search"
            />
          </span>
          <input
            class="w-full pl-12 pr-6 py-3.5 bg-brand-gray-light border-none rounded-full text-xl font-medium focus:outline-none focus:ring-1 focus:ring-brand-blue/20 placeholder:text-brand-text-medium text-brand-text-dark"
            placeholder="Search"
            type="text"
          />
        </div>
        <div
          class="scale-100 origin-top"
        >
          <div
            data-testid="mobile-list"
          />
        </div>
        <div
          class="pt-4 flex items-center justify-between"
        >
          <div
            data-testid="pagination-header"
          />
          <div
            data-testid="pagination-footer"
          />
        </div>
      </div>
      <div
        class="hidden md:flex bg-brand-white rounded-xl border border-brand-gray-light shadow-sm flex-col flex-1 overflow-hidden mt-6"
      >
        <div
          class="flex items-center justify-between p-5 px-6 border-b border-brand-gray-light"
        >
          <div
            class="relative"
          >
            <div
              class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-brand-text-medium"
            >
              <div
                data-testid="icon-search"
              />
            </div>
            <input
              class="w-64 pl-10 pr-4 py-2 bg-brand-gray-light border-none rounded-lg text-sm focus:outline-none placeholder:text-brand-text-medium text-brand-text-dark"
              placeholder="Search payment type"
              type="text"
            />
          </div>
          <div
            data-testid="pagination-header"
          />
        </div>
        <div
          class="flex-1 overflow-auto"
        >
          <div
            data-testid="table"
          />
        </div>
        <div
          data-testid="pagination-footer"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MasterPaymentType Component > MasterPaymentTypeComponent Snapshots > more open state 1`] = `
<DocumentFragment>
  <div
    data-testid="layout"
  >
    <div
      class="flex flex-col h-full pb-18 lg:pb-0 px-3 lg:px-0 lg:-mt-4 relative"
    >
      <div
        class="flex items-center justify-between py-2 mb-1 lg:mb-4 relative"
      >
        <button
          aria-label="Back"
          class="w-11 h-11 rounded-full bg-[#F4F4F5] hover:bg-[#E9E9EB] active:scale-95 transition-all flex items-center justify-center text-black shrink-0"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.4"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M19 12H5"
            />
            <path
              d="M12 19 5 12l7-7"
            />
          </svg>
        </button>
        <h1
          class="flex-1 text-center text-[17px] font-semibold text-black tracking-tight px-2 truncate"
        >
          Payment Type List
        </h1>
        <div
          class="relative shrink-0"
        >
          <button
            aria-expanded="true"
            aria-haspopup="menu"
            aria-label="More options"
            class="w-11 h-11 rounded-full bg-[#F4F4F5] hover:bg-[#E9E9EB] active:scale-95 transition-all flex items-center justify-center text-black"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
            >
              <circle
                cx="5"
                cy="12"
                r="1.8"
              />
              <circle
                cx="12"
                cy="12"
                r="1.8"
              />
              <circle
                cx="19"
                cy="12"
                r="1.8"
              />
            </svg>
          </button>
          <button
            aria-label="Close menu"
            class="fixed inset-0 z-10 cursor-default"
            tabindex="-1"
            type="button"
          />
          <div
            class="absolute right-0 top-[calc(100%+8px)] z-20 w-52 rounded-2xl border border-gray-100 bg-white py-2 shadow-xl overflow-hidden"
            role="menu"
          >
            <button
              class="w-full flex items-center gap-3 px-4 py-3 text-left text-[14px] font-medium text-gray-800 hover:bg-gray-50 transition-colors"
              role="menuitem"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
              >
                <path
                  d="M12 5v14"
                />
                <path
                  d="M5 12h14"
                />
              </svg>
              New Payment Type
            </button>
            <div
              class="mx-3 my-1 h-px bg-gray-100"
              role="separator"
            />
            <button
              class="w-full flex items-center gap-3 px-4 py-3 text-left text-[14px] font-medium text-red-600 hover:bg-red-50 transition-colors"
              role="menuitem"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
              >
                <polyline
                  points="3 6 5 6 21 6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
              Delete
            </button>
          </div>
        </div>
      </div>
      <div
        class="md:hidden space-y-6 mt-10"
      >
        <div
          class="relative mb-3"
        >
          <span
            class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none text-brand-text-medium scale-125"
          >
            <div
              data-testid="icon-search"
            />
          </span>
          <input
            class="w-full pl-12 pr-6 py-3.5 bg-brand-gray-light border-none rounded-full text-xl font-medium focus:outline-none focus:ring-1 focus:ring-brand-blue/20 placeholder:text-brand-text-medium text-brand-text-dark"
            placeholder="Search"
            type="text"
          />
        </div>
        <div
          class="scale-100 origin-top"
        >
          <div
            data-testid="mobile-list"
          />
        </div>
        <div
          class="pt-4 flex items-center justify-between"
        >
          <div
            data-testid="pagination-header"
          />
          <div
            data-testid="pagination-footer"
          />
        </div>
      </div>
      <div
        class="hidden md:flex bg-brand-white rounded-xl border border-brand-gray-light shadow-sm flex-col flex-1 overflow-hidden mt-6"
      >
        <div
          class="flex items-center justify-between p-5 px-6 border-b border-brand-gray-light"
        >
          <div
            class="relative"
          >
            <div
              class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-brand-text-medium"
            >
              <div
                data-testid="icon-search"
              />
            </div>
            <input
              class="w-64 pl-10 pr-4 py-2 bg-brand-gray-light border-none rounded-lg text-sm focus:outline-none placeholder:text-brand-text-medium text-brand-text-dark"
              placeholder="Search payment type"
              type="text"
            />
          </div>
          <div
            data-testid="pagination-header"
          />
        </div>
        <div
          class="flex-1 overflow-auto"
        >
          <div
            data-testid="table"
          />
        </div>
        <div
          data-testid="pagination-footer"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
